--- a/test/fixtures/media.yml
+++ b/test/fixtures/media.yml
@@ -1,11 +1,20 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: MyString
-  maker: MyString
-  description: MyString
+harold_and_maude:
+  kind: 'movie'
+  title: 'Harold and Maude'
+  maker: 'Hal Ashby'
+  description: 'A beautiful love story'
 
-two:
-  title: MyString
-  maker: MyString
-  description: MyString
+
+flowers_in_the_attic:
+  kind: 'book'
+  title: 'Flowers in the Attic'
+  maker: 'VC Andrews'
+  description: 'Creepy story about abuse and incest'
+
+flood:
+  kind: 'album'
+  title: 'Flood'
+  maker: 'They Might Be Giants'
+  description: 'Something listened to for hours on end'
