--- a/test/fixtures/votes.yml
+++ b/test/fixtures/votes.yml
@@ -1,6 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+flowers_in_the_attic:
   medium_id: 1
 
 two:
